# CRM-system

./: .gitignore  .pylintrc  README.md  docker-compose.yaml  env-template  pyproject.toml
crm/crm/: settings.py
instructions/: Инструкция по использованию Pylint.docx  Инструкция по регистрации на GitHub .docx
postgresql_conf/: postgresql.conf
