[project]
name = "CRM-system"
version = "0.0.1"
description = ""
authors = [
    {name = "Сергей Хомук",email = "homuk.serega@yandex.by"}
]
readme = "README.md"

[tool.poetry]
# poetry install --no-root
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.production]
optional = true

[tool.poetry.group.production.dependencies]
django = "^6.0.2"
python-dotenv = "^1.2.2"
psycopg = {extras = ["binary"], version = "^3.3.4"}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pylint = "^4.0.6"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
